Return accumulated data
